# PuertoRico_AI_Competition

./: .gitattributes  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
agents/: __init__.py  action_value_agent.py  action_value_agent_formula.md  base.py  factory_agent.py  mcts_agent.py  ppo_agent.py  random_agent.py  shipping_rush_agent.py  shipping_rush_agent_formula.md  trade_building_agent.py
docs/: COMPETITION_RULES.md  GAME_RULES.md  OBSERVATION_AND_ACTIONS.md  RANKING.md  SUBMISSION_GUIDE.md
examples/: play_one_game.py  run_tournament.py
puerto_rico/: __init__.py  components.py  engine.py  env.py  forward_model.py  observation.py  player.py
submission_template/: README.md  my_agent.py
submissions/: README.md  example_agent.py
tests/: test_agents.py  test_forward_model.py  test_game.py  test_tournament.py
tournament/: __init__.py  leaderboard.py  match.py  runner.py
tournament/rankers/: __init__.py  alpha_rank.py  trueskill_ranker.py  win_rate.py
training/: README.md  __init__.py  train_ppo.py  wrapper.py
webui/: README.md  server.py
webui/static/: app.js  index.html  style.css
